tests-system/rbt-described-name-equality/output
x "Kitten" String
^ rbt-described-name-equality/foo.rsl:5: error: duplicate definition, previous definition at foo.rsl:4
Processed 1 model, 0 checks and 0 requirement files and found 1 error
